// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be closed 1`] = `null`;

exports[`Should be opened and closed after click 1`] = `
<div
  className="pure-modal-backdrop"
  onClick={[Function]}
>
  <div
    className="pure-modal 0.5"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        <div
          className="close"
          onClick={[Function]}
        >
          ×
        </div>
      </div>
      <div
        className="panel-body scrollable"
      />
    </div>
  </div>
</div>
`;

exports[`Should be opened and closed after click 2`] = `null`;

exports[`Should contain width attribute 1`] = `
<div
  className="pure-modal-backdrop"
  onClick={[Function]}
>
  <div
    className="pure-modal 0.5"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    Some content of modal
  </div>
</div>
`;

exports[`Should show content 1`] = `
<div
  className="pure-modal-backdrop"
  onClick={[Function]}
>
  <div
    className="pure-modal 0.5"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        <div
          className="close"
          onClick={[Function]}
        >
          ×
        </div>
      </div>
      <div
        className="panel-body scrollable"
      >
        Some content of modal
      </div>
    </div>
  </div>
</div>
`;

exports[`Should show only content 1`] = `
<div
  className="pure-modal-backdrop"
  onClick={[Function]}
>
  <div
    className="pure-modal 0.5"
  >
    Some content of modal
  </div>
</div>
`;
